Fixed nav and added scrollbar to it

--- a/css/custom.styl
+++ b/css/custom.styl
@@ -47,7 +47,10 @@ header#top
 #sidebar
     col(1/8)
     shift(7/8)
-    padding-top 20px
+    margin-top 20px
+    height 400px
+    overflow hidden
+    border-radius 5px
     a
         simple-button(#eee)
         display block 
@@ -60,12 +63,8 @@ header#top
         border-bottom 1px solid darken(#eee, 3%)
         border-top 1px solid lighten(#eee, 30%)
         &:first-child
-            border-top-left-radius 3px
-            border-top-right-radius 3px
             border-top none
         &:last-child
-            border-bottom-left-radius 3px
-            border-bottom-right-radius 3px
             border-bottom none 
 section.basics
     col(7/8)
@@ -342,16 +341,6 @@ code
 
 
 // Mobile
-bp(1000px)
-.demos > header
-    padding-bottom 10px
-    margin-bottom 20px
-.demos figure
-    center(400px)
-    padding-bottom 20px
-    border-bottom 1px solid #eee
-    margin-bottom 20px
-endbp()
 bp(800px)
 header#top > div, section.basics article .result
     stack()
@@ -398,6 +387,8 @@ footer
         stack()
         ul
             stack()
+#sidebar
+    top auto !important
 endbp()
 
 bp(550px, mf)
@@ -409,4 +400,12 @@ bp(1000px)
 section.basics > article.stack aside, section.basics > article.stack article
     stack(align: left)
     margin-bottom 10px
+.demos > header
+    padding-bottom 10px
+    margin-bottom 20px
+.demos figure
+    center(400px)
+    padding-bottom 20px
+    border-bottom 1px solid #eee
+    margin-bottom 20px
 endbp()
